--- a/src/assets/sass/general.css
+++ b/src/assets/sass/general.css
@@ -20,4 +20,21 @@
   color: var(--white);
 }
 
+.theme-font {
+  color: var(--cta-theme);
+}
+
+.fa-star, .fa-star-half-stroke {
+  color: gold;
+}
+
+.not-found {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 1rem;
+  font-size: 1.25rem;
+  color: var(--cta-theme);
+}
+
 /*# sourceMappingURL=general.css.map */
