--- a/src/assets/sass/searchMarket.css
+++ b/src/assets/sass/searchMarket.css
@@ -19,7 +19,7 @@
   height: 70%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 .search-container .search-box-container .search-box .input-field {
   display: flex;
@@ -43,8 +43,12 @@
 }
 .search-container .search-box-container .search-box .input-field .date-picker {
   display: grid;
-  grid-template-columns: repeat(2, 160px);
-  gap: 10px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-flow: row;
+  gap: 5px;
+}
+.search-container .search-box-container .search-box .input-field .error {
+  color: var(--secondary);
 }
 .search-container .search-box-container .search-box .input-field .service-choice {
   display: grid;
@@ -123,6 +127,7 @@
   margin-left: 0.2rem;
 }
 .search-container .results-container .sitter-small-profile .sitter-info button {
+  margin: 5% 0;
   font-size: 1rem;
   font-weight: 600;
 }
@@ -132,6 +137,67 @@
   color: var(--white);
   font-size: 0.75rem;
   text-align: justify;
+}
+
+@media (min-width: 900px) {
+  .search-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .search-container .search-box-container {
+    width: 70%;
+    height: 50%;
+  }
+  .search-container .search-box-container .search-box {
+    height: 50%;
+    border-radius: 10px;
+    flex-direction: column;
+  }
+  .search-container .search-box-container .search-box form {
+    width: 90%;
+  }
+  .search-container .search-box-container .search-box form .input-field {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .search-container .search-box-container .search-box form .input-field .date-picker {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-flow: row;
+    gap: 5px;
+    width: 100%;
+  }
+  .search-container .search-box-container .search-box form .input-field .service-choice {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: 100%;
+  }
+  .search-container .search-box-container .search-box form .input-field .pets-selection {
+    display: flex;
+    flex-direction: row;
+  }
+  .search-container .search-box-container .search-box form .input-field .pets-selection button {
+    width: auto;
+    margin: 0 1rem;
+  }
+  .search-container .results-container {
+    width: 70%;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .search-container .results-container .sitter-small-profile {
+    margin: 2% 0;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 0.375rem;
+    box-shadow: 0 5px 10px 10px var(--shadow);
+  }
 }
 
 /*# sourceMappingURL=searchMarket.css.map */
