--- a/src/assets/sass/searchMarket.scss
+++ b/src/assets/sass/searchMarket.scss
@@ -19,7 +19,7 @@
       height: 70%;
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
 
       .input-field {
         display: flex;
@@ -45,12 +45,16 @@
 
         .date-picker {
           display: grid;
-          grid-template-columns: repeat(2, 160px);
-          gap: 10px;
+          grid-template-columns: repeat(2, 1fr);
+          grid-auto-flow: row;
+          gap: 5px;
 
           .date-picker-input {
 
           }
+        }
+        .error {
+          color: var(--secondary);
         }
 
         .service-choice {
@@ -138,19 +142,22 @@
 
           p {
             font-size: 0.85rem;
+
             i {
-            margin-left: 0.2rem
+              margin-left: 0.2rem
             }
           }
         }
 
-      button {
-        font-size: 1rem;
-        font-weight: 600;
+        button {
+          margin: 5% 0;
+          font-size: 1rem;
+          font-weight: 600;
+
+        }
 
       }
 
-      }
       .sitter-description {
         padding: 3% 5%;
         border-left: 0.2px solid var(--text-section);
@@ -158,6 +165,79 @@
         font-size: 0.75rem;
         text-align: justify;
         //background-color: var(--cta-theme-secondary);
+      }
+    }
+  }
+}
+
+
+@media (min-width: 900px) {
+  .search-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .search-box-container {
+      width: 70%;
+      height: 50%;
+
+      .search-box {
+        height: 50%;
+        border-radius: 10px;
+        flex-direction: column;
+
+      form {
+        width: 90%;
+
+        .input-field {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+
+          .date-picker {
+            display:grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-auto-flow: row;
+            gap: 5px;
+            width: 100%;
+          }
+
+          .service-choice {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            width: 100%;
+          }
+
+          .pets-selection {
+            display: flex;
+            flex-direction: row;
+
+            button {
+              width: auto;
+              margin: 0 1rem;
+            }
+          }
+        }
+      }
+      }
+    }
+
+    .results-container {
+      width: 70%;
+      background-color: transparent;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .sitter-small-profile {
+        margin: 2% 0;
+        flex-direction: row;
+        justify-content: space-between;
+        border-radius: 0.375rem;
+        box-shadow: 0 5px 10px 10px var(--shadow);
+
       }
     }
   }
