upgraded hooks and error handling

--- a/src/assets/sass/general.css
+++ b/src/assets/sass/general.css
@@ -37,4 +37,10 @@
   color: var(--cta-theme);
 }
 
+@media (min-width: 900px) {
+  .register-container {
+    display: flex;
+  }
+}
+
 /*# sourceMappingURL=general.css.map */
