--- a/src/assets/sass/sitterProfile.scss
+++ b/src/assets/sass/sitterProfile.scss
@@ -39,6 +39,7 @@
       .sitter-info-details-actions {
         display: flex;
         button {
+          width: 50%;
           margin: 3% 2%;
         }
       }
